--- a/Exercício 1/about.html
+++ b/Exercício 1/about.html
@@ -56,8 +56,8 @@
     </div>
 
     <div class="location">
-      <h2 class="maps">Encontre-Nos no Google Maps</h2>
-      <img src="img/maps.jpg" alt="maps">
+      <h2 class="maps">Encontre-Nos no Google Maps</h2>      
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14705.661847883657!2d-43.27164354999999!3d-22.861106099999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997c7352b8f01f%3A0xdc43e9597c8e45ad!2sComplexo%20do%20Alem%C3%A3o%2C%20Rio%20de%20Janeiro%20-%20RJ!5e0!3m2!1spt-BR!2sbr!4v1722577091427!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 
     </section>
