--- a/Exercício 1/cardapio.html
+++ b/Exercício 1/cardapio.html
@@ -109,6 +109,6 @@
         </div>
     </div>
   </div>
-  <footer>&copy; Jardim das delícias, Todos os direitos reservados.</footer>
+  <footer>&copy; 2024 Jardim das delícias, Todos os direitos reservados.</footer>
 </body>
 </html>
