--- a/Exercício 1/cardapio.html
+++ b/Exercício 1/cardapio.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <title>Empadas Deliciosas || Cardápio</title>
 </head>
@@ -19,15 +21,15 @@
         </ul>
       </nav>
     </div>
-    
+
     <div class="content">
     <div class="container">
-      <h2>Cardápio</h2>
+      <h2 class="menu-items">Cardápio</h2>
       <img class="empada" src="img/empada.jpg" alt="empada">
 
       <h3>Empada de Frango - R$ 5,00</h3>
       <p class="info">Uma empada recheada com frango desfiado, temperado com ervas e especiarias.</p>
-      <div>
+      <div class="table-content">
         <table>
           <tr>
             <th class="th1">Nutriente</th>
@@ -110,5 +112,6 @@
     </div>
   </div>
   <footer>&copy; 2024 Jardim das delícias, Todos os direitos reservados.</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
