--- a/Exercício 1/contact.html
+++ b/Exercício 1/contact.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/style.css">
   <title>Contato || Empadas Deliciosas</title>
 </head>
@@ -27,15 +29,39 @@
         <p>Telefone/Whatsapp: +123 456 7890</p>
         <p>Endereço: Rua das Delícias, Bairro do Oco n°:2469</p>
         <div class="social-buttons">
-            <a href="https://www.facebook.com" class="facebook" target="_blank">Facebook</a>
-            <a href="https://www.twitter.com" class="twitter" target="_blank">Twitter</a>
-            <a href="https://www.instagram.com" class="instagram" target="_blank">Instagram</a>
+            <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="https://www.twitter.com"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="https://www.instagram.com"><i class="fab fa-youtube fa-2x"></i></a>            
         </div>
+      </div>
+      <div>
+        <form contact-form>
+
+          <div class="mb-3">
+            <div id="description-contact" class="form-text1">Entre em contato com a gente, faça pedidos, críticas e sugestões abaixo.</div>
+            <label for="name" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="nameHelp">            
+          </div>
+
+          <div class="mb-3">
+            <label for="Inputemail" class="form-label">E-mail</label>
+            <input type="text" class="form-control" id="InputEmailText" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text2">Não vamos divulgar seu e-mail.</div>
+          </div>
+
+          <div class="mb-3">
+            <label for="message" class="form-label">Mensagem</label>
+            <textarea name="message" class="form-control"></textarea>
+          </div>
+          <button type="submit" class="btn btn-light">Enviar</button>
+        </form>
+
       </div>
 
     </div>
 
 
   <footer>&copy; 2024 Jardim das delícias, Todos os direitos reservados.</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
